fix archive table overflow

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -68,6 +68,7 @@ textarea {
 
 .container {
   max-width: 180rem;
+  min-width: 320px;
   margin: 0 auto;
   padding: 0 2rem;
 
