--- a/src/styles/components/_archive.scss
+++ b/src/styles/components/_archive.scss
@@ -20,6 +20,7 @@
 }
 .archive {
   width: auto;
+  min-width: 320px;
   position: absolute;
   top: -1000px;
   left: 110px;
@@ -68,6 +69,20 @@
   &__item > td {
     padding: 0.5rem 1rem;
     border-radius: 3px;
+  }
+
+  &__item > td:first-of-type {
+    max-width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    @include respond(tablet) {
+      max-width: 200px;
+    }
+    @include respond(mobile) {
+      max-width: 100px;
+    }
   }
 
   @include respond(mobile) {
