--- a/src/styles/components/_drag-items.scss
+++ b/src/styles/components/_drag-items.scss
@@ -27,7 +27,7 @@
       line-height: 1.8rem;
       letter-spacing: 1px;
       text-align: left;
-      word-break: break-all;
+      word-break: break-word;
       color: var(--text-color, #222);
       margin: 1rem;
       padding: 0.8rem 3rem 0.8rem 1.2rem;
