--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  min-height: 10rem;
+  min-height: 12rem;
 
   &__tools {
     @include header_sides;
